# zuri

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  build.yml  bump-version.yml  release-checks.yml  release.yml
examples/: server.rs
zuri/: Cargo.toml
zuri/src/: chunk.rs  client.rs  entity.rs  input.rs  io.rs  main.rs  player.rs  protocol.rs  world.rs
zuri/src/entity/: manager.rs  nametag.rs
zuri/src/world/: chunk_mesh.rs  component.rs  mesh.rs
zuri_math/: Cargo.toml
zuri_math/src/: aabb.rs  collider.rs  facing.rs  lib.rs
zuri_model/: Cargo.toml
zuri_model/src/: animation.rs  geometry.rs  lib.rs  model.rs
zuri_nbt/: Cargo.toml  README.md
zuri_nbt/src/: conv.rs  decode.rs  encode.rs  encoding.rs  err.rs  impl.rs  lib.rs  serde.rs  tag.rs  view.rs
zuri_nbt/src/serde/: deserialize.rs  mod.rs  serialize.rs
zuri_net/: Cargo.toml
zuri_net/src/: auth.rs  chan.rs  client.rs  compression.rs  connection.rs  data.rs  decode.rs  encode.rs  encryption.rs  lib.rs
zuri_net/src/client/: auth.rs  data.rs  default_model.json  login.rs  mod.rs  plugin.rs
zuri_net/src/proto/: ints.rs  io.rs  macro.rs  mod.rs
zuri_net/src/proto/packet/: actor_event.rs  actor_pick_request.rs  add_actor.rs  add_behaviour_tree.rs  add_entity.rs  add_item_actor.rs  add_painting.rs  add_player.rs  add_volume_entity.rs  adventure_settings.rs  agent_action.rs  agent_animation.rs  animate.rs  animate_entity.rs  anvil_damage.rs  automation_client_connect.rs  available_actor_identifiers.rs  available_commands.rs  biome_definition_list.rs  block_actor_data.rs  block_event.rs  block_pick_request.rs  book_edit.rs  boss_event.rs  camera.rs  camera_instruction.rs  camera_presets.rs  camera_shake.rs  change_dimension.rs  change_mob_property.rs  chunk_radius_updated.rs  client_bound_debug_renderer.rs  client_bound_map_item_data.rs  client_cache_blob_status.rs  client_cache_miss_response.rs  client_cache_status.rs  client_cheat_ability.rs  client_start_item_cooldown.rs  client_to_server_handshake.rs  code_builder.rs  (+162 more)
zuri_net/src/proto/types/: ability.rs  actor_event.rs  attribute.rs  colour.rs  command.rs  container.rs  device.rs  education.rs  entity_data.rs  event.rs  game_rule.rs  inventory.rs  item.rs  item_descriptor.rs  item_stack.rs  level_event.rs  map.rs  mod.rs  player.rs  recipe.rs  resource_pack.rs  scoreboard.rs  skin.rs  sound_event.rs  structure.rs  world.rs
zuri_net/src/server/: listener.rs  login.rs  mod.rs
zuri_net_derive/: Cargo.toml
zuri_net_derive/src/: lib.rs
zuri_proto/: Cargo.toml
zuri_proto/src/: data.rs  enums.rs  io.rs  lib.rs  macro.rs  packet.rs  packet2.rs
zuri_proto/src/packet/: actor_event.rs  actor_pick_request.rs  add_actor.rs  add_behaviour_tree.rs  add_entity.rs  add_item_actor.rs  add_painting.rs  add_player.rs  add_volume_entity.rs  adventure_settings.rs  agent_action.rs  animate.rs  animate_entity.rs  anvil_damage.rs  automation_client_connect.rs  available_actor_identifiers.rs  available_commands.rs  biome_definition_list.rs  block_actor_data.rs  block_event.rs  block_pick_request.rs  book_edit.rs  boss_event.rs  camera.rs  camera_shake.rs  change_dimension.rs  change_mob_property.rs  chunk_radius_updated.rs  client_bound_debug_renderer.rs  client_bound_map_item_data.rs  client_cache_blob_status.rs  client_cache_miss_response.rs  client_cache_status.rs  client_start_item_cooldown.rs  client_to_server_handshake.rs  code_builder.rs  code_builder_source.rs  command_block_update.rs  command_output.rs  command_request.rs  (+151 more)
zuri_proto/src/types/: ability.rs  actor_event.rs  attribute.rs  colour.rs  command.rs  container.rs  device.rs  education.rs  entity_data.rs  event.rs  game_rule.rs  inventory.rs  item.rs  item_descriptor.rs  item_stack.rs  level_event.rs  map.rs  mod.rs  player.rs  recipe.rs  resource_pack.rs  scoreboard.rs  skin.rs  sound_event.rs  structure.rs  world.rs
zuri_world/: Cargo.toml
zuri_world/src/: chunk.rs  lib.rs  paletted_storage.rs  pos.rs  range.rs  sub_chunk.rs  subchunk.rs  system.rs
zuri_world/src/block/: builder.rs  component.rs  mod.rs  runtime_id.rs  types.rs  vanilla.rs  vanilla_blocks.json
zuri_world/src/block/component/: geometry.rs
zuri_world_derive/: Cargo.toml
zuri_world_derive/src/: lib.rs
zuri_xbox/: Cargo.toml
zuri_xbox/src/: lib.rs  live.rs  minecraft.rs  xbox.rs
