[workspace]
resolver = "2"
members = [
    "zuri",
    "zuri_proto",
    "zuri_math",
    "zuri_nbt",
    "zuri_world",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
