[package]
name = "zuri"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
bytes = "1.3.0"
noise = "0.8.2"
json = "0.12.4"
uuid = "1.2.2"
tokio = { version = "1.20.1", features = ["full"] }
futures-lite = "1.12.0"
async-trait = "0.1.60"
zuri_math = { path = "../zuri_math" }
zuri_model = { path = "../zuri_model" }
zuri_nbt = { path = "../zuri_nbt" }
zuri_net = { path = "../zuri_net" }
zuri_world = { path = "../zuri_world" }
zuri_xbox = { path = "../zuri_xbox" }
rand = "0.8.5"
oauth2 = "4.3.0"
dotenvy = "0.15.6"

[features]
default = ["bevy/tga"]
# Compiles the application for the wayland window system protocol instead of x11. Only for linux.
wayland = ["bevy/wayland"]
