[package]
name = "zuri"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.1"
bevy_mod_billboard = "0.3.0"
bytes = "1.3.0"
noise = "0.8.2"
json = "0.12.4"
uuid = "1.2.2"
tokio = { version = "1.24.2", features = ["full"] }
futures-lite = "1.12.0"
async-trait = "0.1.60"
serde = { version = "1.0.163" , features = ["derive"] }
zuri_math = { path = "../zuri_math" }
zuri_nbt = "0.3.0"
zuri_net = { path = "../zuri_net" }
zuri_world = { path = "../zuri_world", features = ["bevy"] }
zuri_xbox = { path = "../zuri_xbox" }
rand = "0.8.5"
oauth2 = "4.3.0"
dotenvy = "0.15.6"

[features]
# Compiles the application for the wayland window system protocol instead of x11. Only for linux.
wayland = ["bevy/wayland"]
