[package]
name = "zuri_nbt"
version = "0.3.0"
edition = "2021"

[dependencies]
bytes = "1.3.0"
serde = { version = "1.0.162", optional = true }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"

[features]
default = ["serde"]

[dev-dependencies]
serde = { version = "1.0.162", features = ["derive"] }
