[package]
name = "zuri_nbt"
version = "0.3.0"
edition = "2021"
description = "Read and write minecraft NBT data"
repository = "https://github.com/zuri-mc/zuri/"
license = "MIT"
keywords = ["nbt", "minecraft", "bedrock"]
categories = ["encoding", "parser-implementations"]
exclude = [".github/"]

[dependencies]
bytes = "1.3.0"
serde = { version = "1.0.162", optional = true }
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0.40"

[dev-dependencies]
serde = { version = "1.0.162", features = ["derive"] }
