[package]
name = "zuri_net"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-ctr = "0.6.0"
base64ct = "1.5.3"
bytes = "1.3.0"
cipher = "0.4.3"
jsonwebtoken = "8.2.0"
libdeflater = "0.11.0"
p384 = "0.11.2"
rand = "0.8.5"
rust-raknet = { git = "https://github.com/b23r0/rust-raknet", rev = "c9c2424e61baf2fcdb4ef6e85de9c806477b31f1" }
serde = "1.0.151"
serde_json = "1.0.91"
serde_repr = "0.1.10"
snap = "1.1.0"
uuid = { version = "1.2.2", features = ["v4"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.60"
sha2 = "0.10.6"
aes = "0.8.2"
ctr = "0.9.2"
bevy = { version = "0.9.1", optional = true }
futures-lite = "1.12.0"
glam = "0.22.0"
zuri_nbt = { path = "../zuri_nbt" }
zuri_xbox = { path = "../zuri_xbox" }
num-traits = "0.2.15"
num-derive = "0.3.3"
num = "0.4.0"
oauth2 = "4.3.0"
chrono = "0.4.23"
