[package]
name = "zuri_xbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = "1.5.3"
oauth2 = { version = "4.3.0", features = ["ureq"] }
rand = "0.8.5"
serde = "1.0.151"
serde_json = "1.0.91"
sha2 = "0.10.6"
ureq = { version = "2.5.0", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4"] }
bytes = "1.3.0"
chrono = "0.4.23"
p256 = "0.11.1"
p384 = "0.11.2"
